importato font scss e creato header in includes e poi incluso nelle rotte

--- a/resources/sass/_vars.scss
+++ b/resources/sass/_vars.scss
@@ -1,5 +1,8 @@
 
 
+$main-font:'Open Sans', sans-serif;
+
+
 $primary-blue: rgb(0,130,249);
 $footer-gray: rgb(48,48,48);
 $header-font-color: rgb(107,70,77);
