--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,29 @@
-body {
-  background-color: red;
+header {
+  padding: 14px 0;
+  background-color: white;
+}
+
+header .container {
+  max-width: 70%;
+  height: auto;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .container img {
+  width: 4.5rem;
+}
+
+header ul {
+  display: flex;
+}
+
+header li {
+  display: flex;
+  margin: 0 10px;
+  font-size: 12px;
+  font-weight: bold;
 }
 
