--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27,3 +27,51 @@ header li {
   font-weight: bold;
 }
 
+footer {
+  height: 270px;
+  background-color: white;
+  background-image: url(/images/footer-bg.jpg);
+}
+
+footer .container {
+  width: 70%;
+  height: auto;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+footer .liste {
+  padding: 10px 0;
+}
+
+footer ul {
+  font-size: 12px;
+  color: rgb(77, 77, 77);
+  font-weight: 300;
+  margin: 20px;
+}
+
+footer h4 {
+  color: white;
+  margin-bottom: 10px;
+}
+
+footer .big-logo {
+  height: 270px;
+  width: 50%;
+  background-repeat: no-repeat;
+  background-image: url(/images/dc-logo-bg.png);
+  background-position-y: -6rem;
+  background-position-x: 0rem;
+  background-size: cover;
+}
+
+.liste {
+  display: flex;
+}
+
+* {
+  list-style-type: none;
+}
+
