--- a/resources/sass/_footer.scss
+++ b/resources/sass/_footer.scss
@@ -2,7 +2,7 @@ footer {
     
     height: 270px;
     background-color: white;
-    background-image: url(../assets/img/footer-bg.jpg);
+    background-image: url(/images/footer-bg.jpg);
 }
 footer .container {
     width: 70%;
