--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -23,3 +23,10 @@ header {
     font-size: 12px;
     font-weight: bold; 
 }
+
+.jumbo{
+  height: 300px;
+  background-image: url('/images/jumbotron.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
