main part in home ok

--- a/resources/sass/_vars.scss
+++ b/resources/sass/_vars.scss
@@ -7,3 +7,4 @@ $primary-blue: rgb(0,130,249);
 $footer-gray: rgb(48,48,48);
 $header-font-color: rgb(107,70,77);
 $footer-font-color: rgb(68, 65, 65);
+$main-black: rgb(28,28,28);
