--- a/public/css/app.css
+++ b/public/css/app.css
@@ -34,6 +34,33 @@ header li {
   background-size: cover;
 }
 
+.main {
+  background-color: rgb(28, 28, 28);
+}
+
+.main .container {
+  max-width: 70%;
+  height: auto;
+  margin: 0 auto;
+}
+
+.main .card-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.main .card-container .card {
+  width: 13%;
+  padding: 1rem;
+  text-align: center;
+  color: white;
+}
+
+.main .card-container .card img {
+  max-width: 100%;
+}
+
 footer {
   height: 270px;
   background-color: white;
